syntax = "proto3";
package tokens;

option go_package = "./tokens";


message SignedToken {
  bytes signature = 1;
  bytes token = 2;
}
message Token {
    string userid = 1;
    uint64 not_before = 2;
    uint64 not_after = 3;
    string claim = 4;
}
